--- a/views/admin_company_update.html
+++ b/views/admin_company_update.html
@@ -21,12 +21,12 @@
       <ul class="breadcrumb">
         <li>
           <i class="icon-home icon-large"></i>
-          <a href="/yukari">ホーム</a>
+          <a href="/yukari"><%= i('html.label.common.home') %><!--ホーム --></a>
           <span class="divider"><i class="icon-chevron-right arrow-icon"></i></span>
         </li>
         <li style="width: 90px;">
           <i class="icon-briefcase icon-large"></i>
-          <a href="/admin/company">顧客</a>
+          <a href="/admin/company"><%= i('html.label.company') %><!-- 顧客--></a>
           <span class="divider"><i class="icon-chevron-right arrow-icon"></i></span>
         </li>
         <li style="width: 86px;" class="active">
@@ -39,38 +39,38 @@
       <div class="row">
         <div class="page-header position-relative">
           <h1>
-            管理情報
+            <%= i('html.label.company.managerinfo') %><!--管理情報 -->
           </h1>
         </div>
       </div>
       <div class="row">
         <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label class="col-lg-2 control-label">顧客タイプ</label>
+            <label class="col-lg-2 control-label"><%= i('html.label.company.type') %><!--顧客タイプ --></label>
             <div class="col-lg-3">
               <div class="radio pull-left">
                 <label>
                   <input type="radio" name="optionsRadios" id="inputDemo" value="0">
-                  体験顧客
+                  <%= i('html.label.company.type.demo') %><!--体験顧客 -->
                 </label>
               </div>
               <div class="radio pull-left">
                 <label>
-                  <input type="radio" name="optionsRadios" id="inputContract" value="1">契約顧客
+                  <input type="radio" name="optionsRadios" id="inputContract" value="1"><%= i('html.label.company.type.contract') %><!--契約顧客 -->
                 </label>
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="inputAdmin" class="col-lg-2 control-label">管理者ID</label>
+            <label for="inputAdmin" class="col-lg-2 control-label"><%= i('html.label.company.adminid') %><!--管理者ID --></label>
             <div class="col-lg-3">
-              <input type="text" class="form-control" id="inputAdmin" placeholder="管理者ID">
+              <input type="text" class="form-control" id="inputAdmin" placeholder="<%= i('html.label.company.adminid') %>">
             </div>
           </div>
           <div class="form-group">
-            <label for="inputPassword" class="col-lg-2 control-label" id="labelInputPass">初期パスワード</label>
+            <label for="inputPassword" class="col-lg-2 control-label" id="labelInputPass"><%= i('html.label.company.password') %><!--初期パスワード --></label>
             <div class="col-lg-3">
-              <input type="password" class="form-control" id="inputPassword" placeholder="初期パスワード">
+              <input type="password" class="form-control" id="inputPassword" placeholder="<%= i('html.label.company.password') %>">
             </div>
           </div>
         </form>
@@ -78,45 +78,45 @@
       <div class="row">
         <div class="page-header position-relative">
           <h1>
-            基本情報
+            <%= i('html.label.company.basicinfo') %><!--基本情報 -->
           </h1>
         </div>
       </div>
       <div class="row">
         <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label for="inputNameEn" class="col-lg-2 control-label">会社名(英語)</label>
+            <label for="inputNameEn" class="col-lg-2 control-label"><%= i('html.label.company.name1') %><!--会社名(英語) --></label>
             <div class="col-lg-3">
-              <input type="text" class="form-control" id="inputNameEn" placeholder="会社名(英語)">
+              <input type="text" class="form-control" id="inputNameEn" placeholder="<%= i('html.label.company.name1') %>">
             </div>
           </div>
           <div class="form-group">
-            <label for="inputNameJp" class="col-lg-2 control-label">会社名(かな)</label>
+            <label for="inputNameJp" class="col-lg-2 control-label"><%= i('html.label.company.name2') %><!--会社名(かな) --></label>
             <div class="col-lg-3">
-              <input type="text" class="form-control" id="inputNameJp" placeholder="会社名(かな)">
+              <input type="text" class="form-control" id="inputNameJp" placeholder="<%= i('html.label.company.name2') %>">
             </div>
           </div>
           <div class="form-group">
-            <label for="inputAddress" class="col-lg-2 control-label">会社住所</label>
+            <label for="inputAddress" class="col-lg-2 control-label"><%= i('html.label.company.address') %><!--会社住所 --></label>
             <div class="col-lg-3">
-              <input type="text" class="form-control" id="inputAddress" placeholder="会社住所">
+              <input type="text" class="form-control" id="inputAddress" placeholder="<%= i('html.label.company.address') %>">
             </div>
           </div>
           <div class="form-group">
-            <label for="inputTel" class="col-lg-2 control-label">電話番号</label>
+            <label for="inputTel" class="col-lg-2 control-label"><%= i('html.label.company.tel') %><!--電話番号 --></label>
             <div class="col-lg-3">
-              <input type="tel" class="form-control" id="inputTel" placeholder="電話番号">
+              <input type="tel" class="form-control" id="inputTel" placeholder="<%= i('html.label.company.tel') %>">
             </div>
           </div>
           <div class="form-group">
-            <label class="col-lg-2 control-label">有効</label>
+            <label class="col-lg-2 control-label"><%= i('html.label.company.active') %><!--有効性 --></label>
             <div class="col-lg-3">
               <input type="checkbox" style="vertical-align: middle" id="inputActive" checked>
             </div>
           </div>
           <div class="form-group">
             <div class="col-lg-10 pull-right">
-              <button class="btn btn-warning btn-lg" id="addcompany">登録</button>
+              <button class="btn btn-warning btn-lg" id="addcompany"><%= i('html.button.common.add') %><!--登録 --></button>
             </div>
           </div>
         </form>
