--- a/views/yukari.html
+++ b/views/yukari.html
@@ -21,7 +21,7 @@
         <ul class="breadcrumb">
           <li>
             <i class="icon-home icon-large"></i>
-            <a href="#">ホーム</a>
+            <a href="#"><%= i('html.label.common.home') %><!-- ホーム--></a>
           </li>
         </ul><!--.breadcrumb-->
       </div>
