--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -104,19 +104,19 @@
       <ul class="breadcrumb">
         <li>
           <i class="icon-home icon-large"></i>
-          <a href="/yukari">ホーム</a>
+          <a href="/yukari"><%= i('html.label.common.home') %><!-- ホーム--></a>
             <span class="divider">
               <i class="icon-chevron-right arrow-icon"></i>
             </span>
         </li>
         <li>
           <i class="icon-unlink"></i>
-          <a href="/content/synthetic">ネタ</a>
+          <a href="/content/synthetic"><%= i('html.label.synthetic') %><!-- ネタ--></a>
             <span class="divider">
               <i class="icon-chevron-right arrow-icon"></i>
             </span>
         </li>
-        <li class="active">ネタ定義</li>
+        <li class="active"><%= i('html.label.synthetic.new') %><!-- ネタ定義--></li>
       </ul>
       <!--.breadcrumb-->
     </div>
@@ -125,30 +125,30 @@
     <div class="page-content row">
     <div class="row tableheader col-lg-8">
       <div class="pull-left">
-        <h4>情報入力</h4>
+        <h4><%= i('html.label.synthetic.info') %><!-- 情報入力--></h4>
       </div>
     </div>
     <div class="row col-lg-8" style="border:solid 1px #e3e3e3;margin-bottom: 30px">
       <form class="form-horizontal" role="form">
         <div class="form-group" style="margin-top: 15px">
-          <label for="syntheticName" class="col-lg-2 control-label">タイトル</label>
+          <label for="syntheticName" class="col-lg-2 control-label"><%= i('html.label.synthetic.title') %><!-- タイトル--></label>
 
           <div class="col-lg-10">
-            <input type="text" name="syntheticName" class="form-control" id="syntheticName" placeholder="タイトル">
+            <input type="text" name="syntheticName" class="form-control" id="syntheticName" placeholder="<%= i('html.label.synthetic.title') %>">
           </div>
         </div>
         <div class="form-group" style="margin-top: 15px">
-          <label class="col-lg-2 control-label">タイプ</label>
+          <label class="col-lg-2 control-label"><%= i('html.label.synthetic.type') %><!-- タイプ--></label>
 
           <div class="col-lg-10">
             <p class="form-control-static" id="syntheticType"></p>
           </div>
         </div>
         <div class="form-group">
-          <label for="syntheticComment" class="col-lg-2 control-label">コメント</label>
+          <label for="syntheticComment" class="col-lg-2 control-label"><%= i('html.label.synthetic.comment') %><!-- コメント--></label>
 
           <div class="col-lg-10">
-            <textarea class="form-control" name="syntheticComment" id="syntheticComment" placeholder="コメント"
+            <textarea class="form-control" name="syntheticComment" id="syntheticComment" placeholder="<%= i('html.label.synthetic.comment') %>"
                       rows="6"></textarea>
           </div>
         </div>
@@ -156,7 +156,7 @@
     </div>
       <div class="row tableheader col-lg-8">
         <div class="pull-left">
-          <h4>カバー定義</h4>
+          <h4><%= i('html.label.synthetic.sheetadd') %><!-- カバー定義--></h4>
         </div>
 <!--
         <div class="pull-right" style="padding-bottom: 5px">
@@ -179,7 +179,7 @@
       </div>
       <div class="row tableheader col-lg-8" >
         <div class="pull-left">
-          <h4>スライド定義</h4>
+          <h4><%= i('html.label.synthetic.imageadd') %><!-- スライド定義--></h4>
         </div>
 <!--
         <div class="pull-right" style="padding-bottom: 5px">
@@ -197,25 +197,25 @@
         </div>
         <div id="widget_panel" style="font-size: 12px">
           <div class="title">
-            <span>ウィジェット詳細</span>
+            <span><%= i('html.label.synthetic.widget') %><!-- ウィジェット詳細--></span>
 
             <div class="pull-right title_btn">
-              <a id="btn_add_widget" data-toggle="modal" href="#pickPlugin" class="btn btn-default btn-sm">新規追加</a>
+              <a id="btn_add_widget" data-toggle="modal" href="#pickPlugin" class="btn btn-default btn-sm"><%= i('html.button.synthetic.widget.add') %><!-- 新規追加--></a>
             </div>
           </div>
           <div class="widget_body">
             <form class="form-horizontal" role="form" name="widget">
               <div class="form-group">
-                <label for="txt_widget_name" class="col-lg-5 control-label">名前</label>
+                <label for="txt_widget_name" class="col-lg-5 control-label"><%= i('html.label.synthetic.widget.name') %><!-- ウィジェット名--></label>
 
                 <div class="col-lg-7">
                   <input id="txt_widget_name" type="text" name="widget_name" class="form-control"
-                         placeholder="ウィジェット名">
+                         placeholder="<%= i('html.label.synthetic.widget.name') %>">
                 </div>
               </div>
 
               <div class="form-group">
-                <label class="col-lg-5 control-label">サイズ</label>
+                <label class="col-lg-5 control-label"><%= i('html.label.synthetic.widget.size') %><!-- サイズ--></label>
 
                 <div class="col-lg-7">
                   <div class="row">
@@ -229,7 +229,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-lg-5 control-label">位置</label>
+                <label class="col-lg-5 control-label"><%= i('html.label.synthetic.widget.postion') %><!-- 位置--></label>
 
                 <div class="col-lg-7">
                   <div class="row">
@@ -243,21 +243,21 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-lg-5 control-label">アクション</label>
+                <label class="col-lg-5 control-label"><%= i('html.label.synthetic.widget.action') %><!-- アクション--></label>
 
                 <div class="col-lg-7">
                   <select class="form-control" id="action">
-                    <option value="none" selected>なし</option>
-                    <option value="movie">ビデオ放送</option>
-                    <option value="image">画像表示</option>
-                    <option value="jump">スライド遷移</option>
-                    <option value="urlScheme">アプリ起動</option>
+                    <option value="none" selected><%= i('html.select.synthetic.widget.action.none') %><!-- なし--></option>
+                    <option value="movie"><%= i('html.select.synthetic.widget.action.movie') %><!-- ビデオ放送--></option>
+                    <option value="image"><%= i('html.select.synthetic.widget.action.image') %><!-- 画像表示--></option>
+                    <option value="jump"><%= i('html.select.synthetic.widget.action.jump') %><!-- スライド遷移--></option>
+                    <option value="urlScheme"><%= i('html.select.synthetic.widget.action.urlScheme') %><!-- アプリ起動--></option>
                   </select>
                 </div>
               </div>
               <div class="form-group" id="_action_type_movie">
                 <div class="col-lg-7 action_widget_moive">
-                  <a class="btn btn-default btn-sm" name="btnSelectWidgetMoive">ビデオ選択</a>
+                  <a class="btn btn-default btn-sm" name="btnSelectWidgetMoive"><%= i('html.button.synthetic.widget.movie') %><!-- ビデオ選択--></a>
                   <div class="action_widget_moive_preview">
                     <video src="/images/logo-block.png"/></video>
                   </div>
@@ -266,42 +266,42 @@
               <div class="form-group" id="_action_type_image">
                 <div class="col-lg-7" style="display: none">
                   <input id="txt_widget_action_image" type="text" name="widget_name" class="form-control"
-                         placeholder="ウィジェット名">
+                         placeholder="<%= i('html.label.synthetic.widget.name') %>">
                 </div>
 
                 <div class="col-lg-7 action_widget_image">
-                  <a class="btn btn-default btn-sm" name="btnSelectWidgetImage">画像選択</a>
+                  <a class="btn btn-default btn-sm" name="btnSelectWidgetImage"><%= i('html.button.synthetic.widget.image') %><!-- 画像選択--></a>
                   <div class="action_widget_image_preview">
                     <img src="/images/logo-block.png"/>
                   </div>
                 </div>
               </div>
               <div class="form-group" id="_action_type_jump">
-                <a class="btn btn-default btn-sm" name="btnSelectWidgetMetadata" >遷移先</a>
+                <a class="btn btn-default btn-sm" name="btnSelectWidgetMetadata" ><%= i('html.button.synthetic.widget.jump') %><!-- 遷移先--></a>
                 <div class="action_jump_preview">
                   <img src="/images/logo-block.png"/>
                 </div>
               </div>
               <div class="form-group" id="_action_type_urlScheme">
-                <label for="txt_widget_action_app" class="col-lg-5 control-label">ウィジェットID</label>
+                <label for="txt_widget_action_app" class="col-lg-5 control-label"><%= i('html.label.synthetic.widget.urlScheme.id') %><!-- ウィジェットID--></label>
 
                 <div class="col-lg-7">
                   <input id="txt_widget_action_app" type="text" name="widget_name" class="form-control"
-                         placeholder="ウィジェットid">
+                         placeholder="<%= i('html.label.synthetic.widget.urlScheme.id') %>">
                 </div>
 
-                <label for="txt_widget_action_url" class="col-lg-5 control-label">ウィジェットURL</label>
+                <label for="txt_widget_action_url" class="col-lg-5 control-label"><%= i('html.label.synthetic.widget.urlScheme.url') %><!-- ウィジェットURL--></label>
 
                 <div class="col-lg-7">
                   <input id="txt_widget_action_url" type="text" name="widget_name" class="form-control"
-                         placeholder="ウィジェットurl">
+                         placeholder="<%= i('html.label.synthetic.widget.urlScheme.url') %>">
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-lg-5 control-label">操作</label>
+                <label class="col-lg-5 control-label"><%= i('html.label.synthetic.widget.operation') %><!-- 操作--></label>
 
                 <div class="col-lg-7">
-                  <a class="btn btn-default" name="okDelWidget">ウィジェット削除</a>
+                  <a class="btn btn-default" name="okDelWidget"><%= i('html.button.synthetic.widget.delete') %><!-- ウィジェット削除--></a>
                 </div>
               </div>
             </form>
@@ -309,20 +309,20 @@
         </div>
         <div id="metadata_panel">
           <div class="title">
-            <span>背景設定</span>
+            <span><%= i('html.label.synthetic.metadata.title') %><!-- 背景設定--></span>
 
             <div id="btn_to_widget_parent" class="pull-right title_btn">
-              <a id="btn_to_widget" class="btn btn-default btn-sm">ウィジェットエリア</a>
+              <a id="btn_to_widget" class="btn btn-default btn-sm"><%= i('html.button.synthetic.metadata.area') %><!-- ウィジェットエリア--></a>
             </div>
           </div>
           <div class="widget_body">
             <form class="form-horizontal" role="form" name="setmetadata">
               <div class="form-group" id="_metadata_effect">
-                <label for="txt_metadata_effect" class="col-lg-5 control-label">背景のアクション</label>
+                <label for="txt_metadata_effect" class="col-lg-5 control-label"><%= i('html.label.synthetic.metadata.action') %><!-- 背景のアクション--></label>
 
                 <div class="col-lg-7">
                   <select class="form-control" id="txt_metadata_effect">
-                    <option value="none">なし</option>
+                    <option value="none"><%= i('html.select.synthetic.metadata.action') %><!-- なし--></option>
                     <option value="zoomAndMoveRightDown">zoomAndMoveRightDown</option>
                     <option value="zoom">zoom</option>
                     <option value="zoomOut">zoomOut</option>
@@ -332,10 +332,10 @@
                 </div>
               </div>
               <div class="form-group" id="_metadata_effect_image">
-                <label for="btn_select_effect_image" class="col-lg-5 control-label">文字画像設定</label>
+                <label for="btn_select_effect_image" class="col-lg-5 control-label"><%= i('html.label.synthetic.metadata.fontimage') %><!-- 文字画像設定--></label>
 
                 <div class="col-lg-7">
-                  <a class="btn btn-default" id="btn_select_effect_image">画像選択</a>
+                  <a class="btn btn-default" id="btn_select_effect_image"><%= i('html.button.synthetic.metadata.select') %><!-- 画像選択--></a>
                 </div>
               </div>
             </form>
@@ -349,7 +349,7 @@
       </div>
       <div class="col-lg-8" style="margin-top: 30px">
         <div name="okSaveSynthetic" class="col-lg-4 btn btn-warning btn-lg">
-          <a id="saveLayout">保存</a>
+          <a id="saveLayout"><%= i('html.button.synthetic.metadata.save') %><!-- 保存--></a>
         </div>
       </div>
   </div>
@@ -364,7 +364,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button id="pickThumbPicClose" type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">画像選択</h4>
+        <h4 class="modal-title"><%= i('html.button.synthetic.metadata.select') %><!-- 画像選択--></h4>
       </div>
       <div class="modal-body">
         <ol class="popular-tags group" style="list-style: none;padding-left: 0px" id="taglist">
@@ -388,7 +388,7 @@
       <div class="modal-footer">
         <span id="input_filter">フィルター:<input type="text" name="txt_tag"></span>
         <button type="button" action="ok" name="okPickThumb" class="btn btn-warning">
-          <i class="icon-ok icon-white"></i><span> 設定</span></button>
+          <i class="icon-ok icon-white"></i><span> <%= i('html.button.synthetic.setting') %><!-- 設定--></span></button>
       </div>
     </div>
     <!-- /.modal-content -->
@@ -463,7 +463,7 @@
 </script>
 <script type="text/template" id="tmpl_tag_item_all">
   <li class="tag">
-    <a data="all">All</a>
+    <a data="all"><%= i('html.button.synthetic.tag.all') %><!-- All--></a>
   </li>
 </script>
 
