--- a/views/customer_group_list.html
+++ b/views/customer_group_list.html
@@ -22,24 +22,24 @@
       <ul class="breadcrumb">
         <li>
           <i class="icon-home icon-large"></i>
-          <a href="/yukari">ホーム</a>
+          <a href="/yukari"><%= i('html.label.common.home') %><!-- ホーム--></a>
             <span class="divider">
               <i class="icon-chevron-right arrow-icon"></i>
             </span>
         </li>
-        <li class="active">グループ</li>
+        <li class="active"><%= i('html.label.group') %><!-- グループ--></li>
       </ul><!--.breadcrumb-->
     </div>
 
     <div class="page-content">
       <div class="row tableheader">
         <div class="pull-right" style="padding-bottom: 5px">
-            <a href="/customer/group/add" class="btn btn-default" id="groupAdd"><i class="icon-plus"></i>グループ追加</a>
+            <a href="/customer/group/add" class="btn btn-default" id="groupAdd"><i class="icon-plus"></i><%= i('html.button.group.add') %><!-- グループ追加--></a>
         </div>
         <div class="pull-right" style="width: 300px">
           <form class="search-form">
             <div class="input-group">
-              <input type="text" placeholder="検索 ..." class="form-control"  autocomplete="off" />
+              <input type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
               <span class="input-group-addon">
                 <i class="icon-search"></i>
               </span>
@@ -53,12 +53,12 @@
           <thead>
           <tr>
             <th>#</th>
-            <th>グループ番号</th>
-            <th>グループ名</th>
-            <th>グループメンバ数</th>
-            <th>コメント</th>
-            <th>更新日</th>
-            <th>操作</th>
+            <th><%= i('html.label.group.no') %><!-- グループ番号--></th>
+            <th><%= i('html.label.group.name') %><!-- グループ名--></th>
+            <th><%= i('html.label.group.members') %><!-- グループメンバ数--></th>
+            <th><%= i('html.label.group.comment') %><!-- コメント--></th>
+            <th><%= i('html.label.common.updateat') %><!-- 更新日--></th>
+            <th><%= i('html.label.common.operation') %><!-- 操作--></th>
           </tr>
           </thead>
           <tbody id="group_list"></tbody>
@@ -84,8 +84,8 @@
     <td>{{description}}</td>
     <td>{{editat}}</td>
     <td>
-      <a href="/customer/group/edit/{{id}}" class="btn btn-default btn-sm" index={{index}} operation="edit">編集</a>
-      <a href="/customer/group" class="btn btn-default btn-sm" index={{index}} operation="delete">削除</a>
+      <a href="/customer/group/edit/{{id}}" class="btn btn-default btn-sm" index={{index}} operation="edit"><%= i('html.button.common.edit') %><!-- 編集--></a>
+      <a href="/customer/group" class="btn btn-default btn-sm" index={{index}} operation="delete"><%= i('html.button.common.delete') %><!-- 削除--></a>
     </td>
   </tr>
 </script>
