--- a/views/customer_group_update.html
+++ b/views/customer_group_update.html
@@ -21,12 +21,12 @@
       <ul class="breadcrumb">
         <li>
           <i class="icon-home icon-large"></i>
-          <a href="/yukari">ホーム</a>
+          <a href="/yukari"><%= i('html.label.common.home') %><!-- ホーム--></a>
           <span class="divider"><i class="icon-chevron-right arrow-icon"></i></span>
         </li>
         <li style="width:110px">
           <i class="icon-group"></i>
-          <a href="/customer/group">グループ</a>
+          <a href="/customer/group"><%= i('html.label.group') %><!-- グループ--></a>
           <span class="divider"><i class="icon-chevron-right arrow-icon"></i></span>
         </li>
         <li class="active" style="width:86px"><%= title %></li>
@@ -36,36 +36,36 @@
     <div class="page-content">
       <div class="page-header position-relative">
         <h1>
-          グループ
+          <%= i('html.label.group') %><!-- グループ-->
         </h1>
       </div>
       <div>
         <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label for="inputName" class="col-lg-2 control-label">名前</label>
+            <label for="inputName" class="col-lg-2 control-label"><%= i('html.label.group.name') %><!-- 名前--></label>
             <div class="col-lg-3">
-              <input type="text" class="form-control" id="inputName" placeholder="名前">
+              <input type="text" class="form-control" id="inputName" placeholder="<%= i('html.label.group.name') %>">
             </div>
           </div>
           <div class="form-group">
-            <label for="inputMember" class="col-lg-2 control-label">メンバ</label>
+            <label for="inputMember" class="col-lg-2 control-label"><%= i('html.label.group.member') %><!-- メンバ--></label>
             <div class="col-lg-3">
 
               <div id="textBoxMember" class="incrementBox">
-                <input id="inputMember" scope="1" placeholder="+ メンバー" />
+                <input id="inputMember" scope="1" placeholder="<%= i('html.input.group.member') %>" />
               </div>
 
             </div>
           </div>
           <div class="form-group">
-            <label for="inputComment" class="col-lg-2 control-label">コメント</label>
+            <label for="inputComment" class="col-lg-2 control-label"><%= i('html.label.group.comment') %><!-- コメント--></label>
             <div class="col-lg-3">
-              <textarea class="form-control" id="inputComment" placeholder="コメント" rows="6"></textarea>
+              <textarea class="form-control" id="inputComment" placeholder="<%= i('html.label.group.comment') %>" rows="6"></textarea>
             </div>
           </div>
           <div class="form-group">
             <div class="col-lg-10 pull-right">
-              <button class="btn btn-warning btn-lg" id="updateGroup">登録</button>
+              <button class="btn btn-warning btn-lg" id="updateGroup"><%= i('html.button.common.add') %><!-- 登録--></button>
             </div>
           </div>
         </form>
