--- a/views/customer_notice_add.html
+++ b/views/customer_notice_add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>通知</title>
+  <title><%= title %></title>
   <% include common/required.html %>
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
   <script type="text/javascript" src="/javascripts/common.user.view.js"></script>
@@ -20,44 +20,44 @@
       <ul class="breadcrumb">
         <li>
           <i class="icon-home icon-large"></i>
-          <a href="/yukari">ホーム</a>
+          <a href="/yukari"><%= i('html.label.common.home') %><!-- ホーム--></a>
           <span class="divider"><i class="icon-chevron-right arrow-icon"></i></span>
         </li>
         <li style="width:100px">
           <i class="icon-bullhorn icon-large"></i>
-          <a href="/customer/notice">通知</a>
+          <a href="/customer/notice"><%= i('html.label.notice') %><!-- 通知--></a>
           <span class="divider"><i class="icon-chevron-right arrow-icon"></i></span>
         </li>
-        <li class="active" style="width:86px">新規通知</li>
+        <li class="active" style="width:86px"><%= title %></li>
       </ul><!--.breadcrumb-->
     </div>
 
     <div class="page-content">
       <div class="row tableheader col-lg-8">
         <div class="pull-left">
-          <h4>通知</h4>
+          <h4><%= i('html.label.notice') %><!-- 通知--></h4>
         </div>
       </div>
       <div class="row col-lg-8" style="border:solid 1px #e3e3e3;margin-bottom: 30px">
         <form class="form-horizontal" role="form" style="margin-top: 15px">
           <div class="form-group">
-            <label for="title" class="col-lg-2 control-label">タイトル</label>
+            <label for="title" class="col-lg-2 control-label"><%= i('html.label.notice.title') %><!-- タイトル--></label>
             <div class="col-lg-8">
-              <input type="text" class="form-control" name="title" id="title" placeholder="タイトル">
+              <input type="text" class="form-control" name="title" id="title" placeholder="<%= i('html.label.notice.title') %>">
             </div>
           </div>
           <div class="form-group">
-            <label for="keywordsText" class="col-lg-2 control-label">宛先</label>
+            <label for="keywordsText" class="col-lg-2 control-label"><%= i('html.label.notice.recipient') %><!-- 宛先--></label>
             <div class="col-lg-8">
 
               <div id="textBoxNotice" class="incrementBox">
-                <input id="keywordsText" scope="1" placeholder="+ ユーザ、グループ" />
+                <input id="keywordsText" scope="1" placeholder="<%= i('html.input.notice.recipient') %>" />
               </div>
 
             </div>
           </div>
           <div class="form-group">
-            <label for="notice" class="col-lg-2 control-label">メッセージ</label>
+            <label for="notice" class="col-lg-2 control-label"><%= i('html.label.notice.message') %><!-- メッセージ--></label>
             <div class="col-lg-8">
               <textarea class="form-control" rows="6" name="notice" id="notice"></textarea>
             </div>
@@ -66,7 +66,7 @@
       </div>
       <div class="col-lg-8" style="margin-bottom: 30px">
         <div id="addNotice" class="col-lg-4 btn btn-warning btn-lg">
-          発送
+          <%= i('html.button.notice.send') %><!-- 発送-->
         </div>
       </div>
     </div>
