--- a/views/customer_setup.html
+++ b/views/customer_setup.html
@@ -16,12 +16,12 @@
       <ul class="breadcrumb">
         <li>
           <i class="icon-home icon-large"></i>
-          <a href="/yukari">ホーム</a>
+          <a href="/yukari"><%= i('html.label.common.home') %><!-- ホーム--></a>
             <span class="divider">
               <i class="icon-chevron-right arrow-icon"></i>
             </span>
         </li>
-        <li class="active">システム設定</li>
+        <li class="active"><%= i('html.label.setup') %><!-- システム設定--></li>
       </ul><!--.breadcrumb-->
     </div>
 
